browser/style/core.css
html, body{ height:100%; }

body {
	font-family: Tahoma, Helvetica, Arial, Sans-serif;
	line-height: 1.5em;
	background-color: #e2e2e2;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.noselect
{
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

ol, ul
{
    list-style: none;
}

optgroup
{
	color: #fff;
	background-color: #444;
}

/* tables still need 'cellspacing="0"' in the markup */
table 
{
    border-collapse: collapse;
    border-spacing: 0;
}

/* Logo font */
@font-face 
{
	font-family: 'greyscale_basic_regular';
	font-style: normal;
	font-weight: 400;
	src: local('greyscale_basic_regular'), local('greyscale_basic_regular'), url('greyscale_basic_regular.ttf') format('truetype');
}

.logo a {
	font-size: 22pt;
	font-family: 'greyscale_basic_regular', sans-serif;
	color: #888;
	padding-left: 10px;
	text-decoration: none;
}

.e_btn
{
	font-size:12px;
	font-weight:normal;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px;
	border:1px solid #888;
	padding:3px 4px;
	text-decoration:none;
	color:#000;
	display:inline-block;
	text-shadow:1px 48px 0px #ffffff;
 	-webkit-box-shadow:inset 1px 1px 0px 0px #ffffff;
 	-moz-box-shadow:inset 1px 1px 0px 0px #ffffff;
 	box-shadow:inset 1px 1px 0px 0px #ffffff;
	background:-moz-linear-gradient(center top, #fdfdfd 5%, #c8c8c8 100%);
	background:-ms-linear-gradient(top, #fdfdfd 5%, #c8c8c8 100%);
	background:-webkit-gradient(linear, left top, left bottom, color-stop(5%, #fdfdfd), color-stop(100%, #c8c8c8));
	background-color:#fdeded !important;
}

.e_btn:active
{
	background:-moz-linear-gradient(center top, #fdfdfd 100%, #c8c8c8 5%);
	background:-ms-linear-gradient(top, #fdfdfd 100%, #c8c8c8 5%);
	background:-webkit-gradient(linear, left top, left bottom, color-stop(100%, #fdfdfd), color-stop(5%, #c8c8c8));
	position:relative;
}

.plugin
{
	font-size: 8pt;
	background-color: #ff8;
	border: 1px solid #444;
	z-index: 100;
	padding: 2px;
	cursor: move;
	position: absolute;
	white-space: nowrap;
}
	
.graph
{
	background: #ffa !important;
}

.proxy
{
	background: #badaff !important;
}

.register
{
	background: #c6ffc8 !important;
}


.config_btn
{
	width: 16px;
	height: 16px;
	margin: 2px;
	border: 1px;
	background: url('../images/config.png') no-repeat;
	position: relative;
	left: -41px;
	top: 1px;
}

.pl_layout
{
	border-collapse: separate;
	border-spacing: 0px;
}

.pl_header
{
/*	background-color: #dde; */
	background-color: #656974;
	color: #fff;
}

.pl_header .t
{
	padding: 0px;
	padding-left: 1px;
	padding-right: 2px;
	vertical-align: top;
	display: inline-block;
	width: 100%;
	height: 16px;
	font-weight: bold;
}

.ic
{
	text-align: left;
	vertical-align: top;
}

.oc
{
	text-align: right;
	vertical-align: top;
}

.pl_slot
{
	cursor: pointer;
}

.pui_col
{
	padding: 3px;
	padding-left: 2px;
	padding-right: 8px;
}

.plugin-icon
{
	float: left;
	width: 16px;
	height: 16px;
	padding: 0;
	margin: 0;
	margin-right: 2px;
	margin-bottom: 2px;
	position: relative;
	top: 1px;
	left: 1px;
	background-color: #ddd !important;
	border: 1px solid #ddd;
	cursor: default;
}

